	* am/pr.am: updated headers for release
	* am/release.am: updated headers for release
	* am/rpm.am: updated headers for release
	* am/sctp.am: updated headers for release
	* am/snmp.am: updated headers for release
	* am/sock2path.am: updated headers for release
	* am/strconf.am: updated headers for release
	* am/version.am: updated headers for release

2008-04-25  Brian Bidulock  <bidulock@openss7.org>

	* openss7.refs: updated references
	* doc/manual/news.texi: updates to AGPLv3
	* doc/manual/openss7.texi: updates to AGPLv3
	* doc/manual/releases.texi: updates to AGPLv3
	* doc/projects/ss/ss.texi: updates to AGPLv3

2008-04-13  Brian Bidulock  <bidulock@openss7.org>

	* openss7.spec.in: prepare for doc/papers
	* debian/rules.in: prepare for doc/papers

2008-04-12  Brian Bidulock  <bidulock@openss7.org>

	* acinclude.m4: had to drop archive compatibility back to UNIX V7 on the
	  master package due to the maximum path length restrictions.
	* doc/Makefile.am: added projects subdirectory to pass distcheck

2008-04-11  Brian Bidulock  <bidulock@openss7.org>

	* THANKS: remove deprecated Nexusware support
	* doc/manual/bugs.texi: remove deprecated Nexusware support
	* doc/manual/install.texi: remove deprecated Nexusware support
	* doc/manual/todo.texi: remove deprecated Nexusware support
	* doc/manual/texi/install.texi: remove deprecated Nexusware support
	* scripts/texi/compat.texi: remove deprecated Nexusware support
	* scripts/texi/funding.texi: remove deprecated Nexusware support
	* scripts/texi/install.texi: remove deprecated Nexusware support
	* texi/install.texi: remove deprecated Nexusware support

	* m4/openss7.m4: automake 1.10 ok with defining DVIPS

2008-04-10  Brian Bidulock  <bidulock@openss7.org>

	* doc/manual/Makefile.am: distribute agpl.texi

	* am/openss7.am: add BUILT_SOURCES to accumuluate
	* scripts/modpost.sh: handle new EXPORT_UNUSED_SYMBOL
	* doc/manual/bugs.texi: remove deprecated Nexusware support