@@ -1,10 +1,10 @@
 /*****************************************************************************
 
- @(#) $Id: ds_agent.h,v 0.9.2.2 2007/12/15 20:20:08 brian Exp $
+ @(#) $Id: ds_agent.h,v 0.9.2.3 2008-04-28 09:47:28 brian Exp $
 
  -----------------------------------------------------------------------------
 
- Copyright (c) 2001-2007  OpenSS7 Corporation <http://www.openss7.com/>
+ Copyright (c) 2001-2008  OpenSS7 Corporation <http://www.openss7.com/>
  Copyright (c) 1997-2001  Brian F. G. Bidulock <bidulock@openss7.org>
 
  All Rights Reserved.
@@ -46,11 +46,14 @@
 
  -----------------------------------------------------------------------------
 
- Last Modified $Date: 2007/12/15 20:20:08 $ by $Author: brian $
+ Last Modified $Date: 2008-04-28 09:47:28 $ by $Author: brian $
 
  -----------------------------------------------------------------------------
 
  $Log: ds_agent.h,v $
+ Revision 0.9.2.3  2008-04-28 09:47:28  brian
+ - updated headers for release
+
  Revision 0.9.2.2  2007/12/15 20:20:08  brian
  - updates
 
@@ -62,7 +65,7 @@
 #ifndef __LOCAL_DS_AGENT_H__
 #define __LOCAL_DS_AGENT_H__
 
-#ident "@(#) $RCSfile: ds_agent.h,v $ $Name:  $($Revision: 0.9.2.2 $) Copyright (c) 2001-2007 OpenSS7 Corporation."
+#ident "@(#) $RCSfile: ds_agent.h,v $ $Name:  $($Revision: 0.9.2.3 $) Copyright (c) 2001-2008 OpenSS7 Corporation."
 
 /* defines agent's default store registrations */
 
